# GamePoll

./: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
GamePoll/: asgi.py  settings.py  urls.py  wsgi.py
GamePoll/settings/: __init__.py  base.py  local.py  production.py
polls/: admin.py  admin_views.py  apps.py  models.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_alter_pollblock_person_alter_vote_person.py  0003_tag_gametag.py  0004_remove_poll_end_date_poll_closed.py  0005_vote_weight.py  0006_game_completed.py  0007_remove_vote_weight_gamevote_weight.py  0008_remove_gamevote_weight.py  0009_game_tags_gamevote_sub_vote_alter_poll_title_and_more.py  0010_alter_game_steam_id_delete_gametag.py  0011_remove_gamevote_sub_vote.py  0012_remove_poll_closed_poll_status_vote_sub_vote.py  0013_remove_poll_start_date.py
polls/pipelines/: twitch_pipeline.py
polls/static/polls/: addvote.js  newpoll.js
polls/templates/: 400.html  403.html  404.html  500.html
polls/templates/polls/: dev_login.html  game_add.html  game_import.html  game_list.html  generic_message.html  index.html  layout.html  login.html  not_voted.html  poll_add.html  poll_added.html  poll_list.html  poll_locked.html  poll_not_found.html  poll_toggle_lock.html  profile.html  retract_vote.html  retract_vote_ok.html  second_vote_attempt.html  vote_add.html  vote_details.html  vote_error.html  vote_ok.html  vote_stats.html  work_in_progress.html
polls/templatetags/: my_filters.py  pluralize.py
